added links for experience

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@ Hi, my name is Joseph Spivack and I am a student at Stony Brook University study
 		<h2 style="color:#D9B310;">Experience</h2> 
   		<div class="panel-group">
     			<div class="panel panel-default">
-      				<div class="panel-heading">Mentor for FIRST Robotics team 3950</div>
+				<div class="panel-heading">Mentor for <a href="https://northshorerobotics.wixsite.com/website">FIRST Robotics team 3950</a></div>
       				<div class="panel-body">I am a programming mentor for FIRST Robotics Team 3950, Robogym. You can find their website here. Every year from early January through to mid February the team builds a robot based on a challenge given by the FIRST organization. I help out by teaching programming concepts and robotics specific concepts to the members of the programming team. I was a member in high school and for three years was the head programmer. My junior year we won the regional competition and went to St. Louis for the national competition. The next year I was awarded MVP for my team.</div>
     			</div>
    	 		<div class="panel panel-default">
-      				<div class="panel-heading">Mentor for Sea Cliff Makeshop</div>
+			<div class="panel-heading">Mentor for <a href="http://www.seacliffmakeshop.org/">Sea Cliff Makeshop</a></div>
       				<div class="panel-body">Near the end of high school I taught weekly programming classes for middle school students. These classes covered basic programming concepts as well as an explanation of object oriented programming using Java and C++. At the end of the these classes the students would develop a basic game by implementing the game logic and I took the projects and brought them to life with visuals.</div>
     			</div>
 		</div>
