--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
   h2 {color:#D9B310;}
   h3 {color:#D9B310;}
   h4 {color:#D9B310;}
-  a{color:#FFFFFF;}
+  a:link {color:#FFFFFF;}
+  a:visited {color:#FFFFFF;}
 </style>
 </head>
 <body>	
