--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 	<div class="container-fluid navbar-fixed-top" style="margin-left:0%; margin-right:80%; margin-top:70px" >
 	<div class="panel panel-default">
 		<div class="panel-heading">contact me at:</div>
-		<div class="panel-body"><p>joseph.<wbr>spivack<wbr>@<wbr>stonybrook<wbr>.edu</p><a  href="https://github.com/JoeSpivack"><img src="./Img/GitHub.png" alt=email width=15% hight=15% ></a></div>
+		<div class="panel-body"><p>joseph.<wbr>spivack<wbr>@<wbr>stonybrook<wbr>.edu</p><a  href="https://github.com/JoeSpivack"><img src="./Img/GitHub.png" alt=email width=15% hight=15% ></a><p><a href = "./Resume.pdf" style = "margin-top:15px" class="btn btn-primary">Resume</a></p>
+</div>
 	</div>
 	</div>
 	<div  class="container-fluid elements" style = "margin-top: -50px;">
@@ -255,7 +256,7 @@ Hi, my name is Joseph Spivack and I am a student at Stony Brook University study
 	  	<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-body">
-        <img src = "./Img/Photos/Img5.jpg" class="img-rounded" width=100% hight=100%>
+        <img src = "./Img/Photos/Img6.jpg" class="img-rounded" width=100% hight=100%>
       				</div>
 			</div>
 		</div>
