centered resume button

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	<div class="container-fluid navbar-fixed-top" style="margin-left:0%; margin-right:80%; margin-top:70px" >
 	<div class="panel panel-default">
 		<div class="panel-heading">contact me at:</div>
-		<div class="panel-body"><p>joseph.<wbr>spivack<wbr>@<wbr>stonybrook<wbr>.edu</p><a  href="https://github.com/JoeSpivack"><img src="./Img/GitHub.png" alt=email width=15% hight=15% ></a><p><a href = "./Resume.pdf" style = "margin-top:15px" class="btn btn-primary">Resume</a></p>
+		<div class="panel-body"><p>joseph.<wbr>spivack<wbr>@<wbr>stonybrook<wbr>.edu</p><a  href="https://github.com/JoeSpivack"><img src="./Img/GitHub.png" alt=email width=15% hight=15% ></a><p align="center"><a href = "./Resume.pdf" style = "margin-top:15px;width:70%" class="btn btn-primary">Resume</a></p>
 </div>
 	</div>
 	</div>
