changed bio tag to link to image rather than name

--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 	</ul>
 	</div>
 </nav>
-	<div style="margin-top:25px;" class="text-center">
+	<div id="Bio" style="margin-top:-25px; padding-top: 50px" class="text-center">
 		<img src="./Img/me.jpg" class="img-circle center-block" alt="me" width=20% hight=20%>
-		<h1 id="Bio" style="padding-top:70px; margin-top:-50px;">Joseph Spivack</h1>
+		<h1 style="padding-top:70px; margin-top:-50px;">Joseph Spivack</h1>
 	</div>
 	<div class="container-fluid navbar-fixed-top" style="margin-left:0%; margin-right:80%; margin-top:70px" >
 	<div class="panel panel-default">
