--- a/index.html
+++ b/index.html
@@ -1,79 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Joseph Spivack's webpage</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<style>
-  body {
-	margin-top: 70px;
-	position: relative;
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	background-color: #1D2731; 
-  }
-   .navbar-inverse {
-    background-color: #0B3C5D;
-    border-color: #0B3C5D;
-   }
-   .navbar-inverse .navbar-nav > li > a {
-    color: #D9B310;
-}
-.navbar-default .navbar-nav > li > a:hover{
-	color: #FFFFFF;	
-}
-.navbar-default .navbar-nav > li > a:focus {
-    color: #D9B310;
-}
-  .well{
-       background-color: #328CC1;
-       border-color:#0B3C5D;
-       color: #FFFFFF;
-   }
-   .panel > .panel-heading{
-       background-image: none;
-       background-color: #0B3C5D;
-       border-color:#0B3C5D;
-       color: #FFFFFF;
-   }
-   .panel-body {
-       background-color: #328CC1;
-       border-color:#0B3C5D;
-       color: #FFFFFF;
-   }
-   .panel {
-	border-color:#0B3C5D;
-   }
-  .affix {
-      top:0;
-      z-index: 10;
-  }
-  .navbar {
-      margin-bottom: 20px;
-  }
-
-  .affix ~ .container-fluid {
-     position: relative;
-     top: 50px;
-  }
-  .elements {	
-	padding-top: 100px;
-    	margin-top: 100px;
-	margin-left: 20%;
-	margin-right: 20%;
-    	-webkit-background-clip: content-box;
-    	background-clip: content-box;
-	
-  }
-  h1 {color:#D9B310;}
-  h2 {color:#D9B310;}
-  h3 {color:#D9B310;}
-  h4 {color:#D9B310;}
-  a:link {color:#FFFFFF;}
-  a:visited {color:#FFFFFF;}
-</style>
+	<title>Joseph Spivack's webpage</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>	
 	<nav class="class = navbar navbar-inverse navbar-fixed-top">
